--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap') ;
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: Open Sans , sans-serif;
+}
+
 .App {
   text-align: center;
 }
@@ -30,6 +41,137 @@
   color: #61dafb;
 }
 
+.radio-sp {
+  display: inline-block;
+  margin-left: 5px;
+}
+
+.main-cols {
+  display: flex;
+  flex-direction: column;
+}
+
+.product-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 20px;
+  width: 80%;
+}
+
+.side-nav-categories {
+  background-color: #282c3431;
+  border-radius: 10px;
+  height: 100%;
+  padding: 5px;
+  width: 260px;
+}
+
+.category-div {
+  display: flex;
+  flex-direction: row;
+  margin: 10px;
+}
+
+.shopping-header, .shopping-footer {
+  background-color: #282c34;
+  color: rgb(207, 207, 207);
+  display: block;
+  height: 50px;
+  padding: 10px;
+  text-align: center;
+}
+
+.shopping-header h1 {
+  font-size: 2em;
+}
+
+.shopping-footer {
+  bottom: 0;
+  height: 50px;
+  position: fixed;
+  width: 100%;
+}
+
+.shopping-main {
+  margin: auto;
+}
+
+.main-sec {
+  margin: auto;
+  margin-bottom: 60px;
+  padding: 15px;
+  position: relative;
+  width: 90%;
+}
+
+.initial-message {
+  font-weight: 600;
+}
+
+.search-bar {
+  display: flex;
+  padding: 5px 0;
+}
+
+.cartIcon {
+  height: 30px;
+}
+
+.img-cart {
+  height: 30px;
+}
+
+.search-button {
+  background-color: #282c34;
+  border-radius: 5px;
+  color: rgb(226, 226, 226);
+  height: 30px;
+  margin: 0 10px;
+  padding: 5px 10px;
+}
+
+.search-text {
+  height: 20px;
+  padding: 5px;
+  width: 200px;
+}
+
+.display-flex {
+  display: flex;
+}
+
+.product-card {
+  align-content: center;
+  align-items: center;
+  border: 1px solid rgba(0, 0, 0, 0.322);
+  display: flex;
+  flex-direction: column;
+  height: 300px;
+  justify-items: center;
+  padding: 10px;
+  width: 200px;
+}
+
+.pc-title {
+  font-weight: 700;
+  padding-bottom: 5px;
+  text-align: center;
+}
+
+.pc-img {
+  align-self: center;
+  height: 150px;
+  justify-content: center;
+}
+
+.pc-price {
+  font-size: 1.1em;
+}
+
+.pc-id {
+  font-size: 0.6em;
+}
+
 @keyframes App-logo-spin {
 
   from {
@@ -40,3 +182,4 @@
     transform: rotate(360deg);
   }
 }
+
