--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,9 +1,36 @@
+.home-page {
+  align-items: flex-start;
+  display: flex;
+  justify-content: space-between;
+}
+
+.category-list {
+  align-items: flex-start;
+  border: 2px solid black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 10px;
+  padding: 20px;
+  width: 20%;
+}
+
+.category-list > *:first-child {
+  font-weight: 400;
+  margin-top: 0;
+}
+
+.category-item-radio {
+  margin-right: 10px;
+}
+
 .search-section {
   align-items: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 1rem;
+  width: 100%;
 }
 
 .search-section > *:first-child {
