5 - List products by term search

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -28,13 +28,18 @@
   margin-right: 10px;
 }
 
+.main-content {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
 .search-section {
   align-items: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 1rem;
-  width: 100%;
 }
 
 .search-section > *:first-child {
@@ -43,7 +48,14 @@
   width: 90%;
 }
 
-.search-input {
+.query-button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.query-input {
   border: 1px solid black;
   border-radius: 20px;
   font-size: 1.2rem;
@@ -53,7 +65,7 @@
   width: 100%;
 }
 
-.home-initial-message {
+.message {
   font-size: 1.5rem;
   margin-bottom: 1rem;
 }
