--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+
+div#sidebar {
+  float: left;
+  width: 300px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -13,6 +19,85 @@
     animation: App-logo-spin infinite 20s linear;
   }
 
+}
+
+input[type="button"] {
+  padding: 5px;
+}
+
+input[type="text"] {
+  padding: 5px;
+}
+
+a{
+  color: -webkit-link;
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+
+.shopping-cart {
+	box-shadow:inset 0px 1px 3px 0px #91b8b3;
+	background:linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
+	background-color:#768d87;
+	border-radius:5px;
+	border:1px solid #566963;
+	display:inline-block;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:11px 23px;
+	text-decoration:none;
+	text-shadow:0px -1px 0px #2b665e;
+  margin-bottom: 14px;
+}
+.shopping-cart:hover {
+	background:linear-gradient(to bottom, #6c7c7c 5%, #768d87 100%);
+	background-color:#6c7c7c;
+}
+.shopping-cart:active {
+	position:relative;
+	top:1px;
+}
+
+
+div#sidebar {
+  float: left;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  padding: 18px;
+}
+
+form {
+  margin-bottom: 30px;
+  padding-left: 350px;
+  
+}
+
+h2.search-msg {
+  padding-left: 322px;
+}
+
+section#product-list {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+}
+
+div#product-card {
+  display: flex;
+  width: 250px;
+  flex-direction: column;
+  align-content: space-between;
+  padding: 50px;
+  border-width: 1px;
+  border-color: gray;
+  border-style: solid;
 }
 
 .App-header {
