--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -65,6 +65,13 @@
   width: 100%;
 }
 
+.product-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 1rem;
+}
+
 .message {
   font-size: 1.5rem;
   margin-bottom: 1rem;
