--- a/src/styles/ShoppingCart.css
+++ b/src/styles/ShoppingCart.css
@@ -13,7 +13,7 @@
   margin: 0 1rem;
 }
 
-.product-list {
+.cart-product-list {
   align-items: center;
   display: flex;
   flex-direction: column;
