--- a/src/styles/CarrinhoBt.css
+++ b/src/styles/CarrinhoBt.css
@@ -1,21 +1,21 @@
 .bt-container {
+  align-items: center;
+  background: #1d3557;
+  border-radius: 3px;
   cursor: pointer;
   display: flex;
-  align-items: center;
   justify-content: center;
   margin: 5px;
-  border-radius: 3px;
-  background: #1d3557;
 }
 
 .bt-texto {
   color: white;
   font-weight: 500;
-  padding: 0 10px 0 10px;
+  padding: 0 10px;
 }
 
 svg {
-  margin: 4px 15px;
-  height: 28px;
   fill: white;
+  height: 28px;
+  margin: 4px 15px;
 }
