--- a/src/styles/Produto.css
+++ b/src/styles/Produto.css
@@ -4,35 +4,35 @@
 }
 
 .produto-container {
-  height: 400px;
-  width: 250px;
-  display: flex;
-  flex-direction: column;
-  margin-right: 18px;
-  margin-bottom: 18px;
+  background: white;
   border-radius: 10px;
   box-shadow: 2px 2px 3px rgb(0 0 0 / 15%);
-  background: white;
+  display: flex;
+  flex-direction: column;
+  height: 400px;
+  margin-bottom: 18px;
+  margin-right: 18px;
+  width: 250px;
 }
 
 .image-container {
+  border-bottom: 1px solid rgb(226, 226, 226);
   height: 250px;
   width: 250px;
-  border-bottom: 1px solid rgb(226, 226, 226);
 }
 
 .text-container {
   margin: 10px 12px;
 }
 
-h2.price {
+.price {
   color: black;
   font-size: 25px;
   font-weight: 500;
   line-height: 55px;
 }
 
-p.nome-produto {
+.nome-produto {
   color: #333;
   font-size: 14px;
   font-weight: 400;
@@ -40,9 +40,9 @@ p.nome-produto {
 }
 
 img {
-  max-width: 100%;
-  height: 100%;
-  object-fit: contain;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  height: 100%;
+  max-width: 100%;
+  object-fit: contain;
 }
