--- a/src/App.css
+++ b/src/App.css
@@ -91,9 +91,9 @@ body {
 
 .shopping-footer {
   bottom: 0;
+  font-size: 0.7em;
   position: fixed;
   width: 100%;
-  font-size: 0.7em;
 }
 
 .shopping-main {
@@ -269,17 +269,17 @@ body {
 }
 
 .content-header {
+  align-items: center;
+  color: white;
   display: flex;
   justify-content: space-between;
-  align-items: center;
   padding: 5px;
-  color: #ffffff;
 }
 
 .trybezon-header {
   display: inline-block;
-  width: 130px;
   font-size: 1.5em;
+  width: 130px;
 }
 
 .trybezon-header-logo {
@@ -287,7 +287,7 @@ body {
 }
 
 .text-header {
-  font-family: Lato, sans-serif;
+  font-family: Lato , sans-serif;
   font-size: 1.3em;
   font-weight: 600;
 }
@@ -301,14 +301,14 @@ body {
 }
 
 .payments-footer {
-  margin: 10px 0;
-  color: #ffffff;
+  color: white;
   font-size: 1.1em;
+  margin: 10px 0;
 }
 
 .payments-devs {
-  margin: 10px 0;
   color: #6e6e6e;
+  margin: 10px 0;
 }
 
 @keyframes App-logo-spin {
