--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -62,3 +62,13 @@ h4 {
   padding: 5px;
   width: 22%;
 }
+
+.thumbnail {
+  height: 100px;
+  width: 100px;
+}
+
+.frete-gratis {
+  height: 50px;
+  width: 50px;
+}
