--- a/src/temp.css
+++ b/src/temp.css
@@ -15,15 +15,39 @@
 }
 
 .conteiner-left {
+  display: flex;
+  flex-direction: column;
   width: 15%;
-  height: 100vh;
 }
 
 .conteiner-right {
+  display: flex;
   width: 75%;
-  height: 100vh;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .conteiner-left li {
   list-style-type: none;
+}
+
+.conteiner-right li {
+  display: flex;
+  flex-direction: column;
+  border: 1px black solid;
+  border-radius: 3%;
+  list-style-type: none;
+  width: 100px;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.conteiner-right li h1 {
+  font-size: 10px;
+  text-align: center;
+}
+
+.conteiner-right li img {
+  width: 100px;
 }
