--- a/src/App.css
+++ b/src/App.css
@@ -321,9 +321,65 @@ body {
   transition: color 200ms;
 }
 
+.star-div {
+  margin: 10px 0;
+  display: inline-block;
+}
+
 .star-rate {
   display: none;
 }
+
+.main-sec-detail button {
+  margin-top: 30px;
+  background-color: #282c34;
+  border: #282c34 1px solid;
+  border-radius: 5px;
+  color: rgb(243, 243, 243);
+  padding: 5px;
+}
+
+.form-eval {
+  margin: 30px 0 0;
+}
+
+.form-eval input , textarea {
+  padding: 5px 10px;
+  border-radius: 5px;
+  width: 250px;
+  text-align: center;
+}
+
+.form-eval p {
+  margin: 50px 0 10px;
+  color: #3d3d3f;
+  font-size: 1.5em;
+}
+
+.cart {
+  margin: auto;
+  margin-top: 30px;
+  padding: 20px;
+  background-color: #f1f1f1;
+  width: 70%;
+}
+
+.cart-title-h {
+  margin: 10px 0 20px;
+  text-align: center;
+}
+
+.prod-cart-div {
+  margin: 15px 0;
+}
+/* 
+.form-eval textarea {
+  padding: 5px 10px;
+  border-radius: 5px;
+  width: 250px;
+  text-align: center;
+} */
+
 @keyframes App-logo-spin {
 
   from {
