--- a/src/styles/ProductDetail.css
+++ b/src/styles/ProductDetail.css
@@ -9,17 +9,17 @@
   width: 400px;
 }
 
-img.product-thumbnail {
+.product-thumbnail {
   width: 50px;
 }
 
 .div200 {
-  display: flex;
-  height: 57px;
-  margin: 10px;
   align-items: stretch;
   border: solid 2px;
-  padding: 13px;
-  max-width: 900px;
+  display: flex;
+  height: 57px;
   justify-content: space-evenly;
+  margin: 10px;
+  max-width: 900px;
+  padding: 13px;
 }
