--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
 }
 
 body {
+  background-color: #fafafa;
   font-family: Amazon Ember , Helvetica , sans-serif;
 }
 
@@ -63,7 +64,7 @@ body {
 }
 
 .side-nav-categories {
-  background-color: #282c3431;
+  background-color: #ffd000c0;
   border-radius: 10px;
   height: 100%;
   padding: 5px;
@@ -153,23 +154,25 @@ body {
 
 .display-flex {
   display: flex;
+  margin: 20px 0;
 }
 
 .product-card {
   align-content: center;
   align-items: center;
+  background-color: white;
   display: flex;
   flex-direction: column;
   height: 300px;
   justify-items: center;
   padding: 10px;
-  width: 200px;
+  width: 230px;
 }
 
 .product-border {
-  border: 1px solid rgba(0, 0, 0, 0.322);
+  border: 1px solid rgba(255, 255, 255);
   border-radius: 5px;
-  margin: 5px;
+  margin: 0 25px 25px 0;
 }
 
 .product-name-link {
@@ -188,6 +191,7 @@ body {
   align-self: center;
   height: 150px;
   justify-content: center;
+  max-width: 230px;
 }
 
 .pc-price {
@@ -405,6 +409,26 @@ body {
 
 .cart-prod-price {
   margin-bottom: 10px;
+}
+
+/* .div-shopping-cart-icon {
+
+} */
+
+.shopping-cart-button {
+  position: absolute;
+  z-index: 0;
+}
+
+.shopping-cart-size {
+  color: #fb0;
+  display: inline-block;
+  font-size: 1em;
+  font-weight: 800;
+  margin-left: 23px;
+  position: absolute;
+  width: 20px;
+  z-index: 1;
 }
 
 .cart-empty-khabane {
