--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+* {
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,10 +16,106 @@ code {
     monospace;
 }
 
-ul,ol {
+ul,
+ol {
   list-style: none;
 }
 
-img { 
+li {
+  padding-left: 10px;
+  display: flex;
+  flex-direction: column;
+  align-content: flex-start;
+  text-align: start;
+}
+
+img {
   width: 160px;
+}
+
+aside {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: rgb(234, 255, 250);
+  width: 20%;
+  height: 100%;
+  margin-top: 105px;
+}
+
+header {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 105px;
+  background-color: rgb(255, 255, 156);
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+button {
+  border-radius: 16px;
+  width: 120px;
+  height: 40px;
+  background-color: rgb(141, 179, 179);
+  border-style: none;
+}
+
+.product_section {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20%;
+  margin-top: 105px;
+  width: 80%;
+  background-color: rgb(255, 255, 255);
+}
+
+.categories-ul {
+  display: flex;
+  flex-direction: column;
+}
+
+.home-initial-message {
+  margin-left: 10px;
+}
+
+.home-button-header {
+  height: 30px;
+}
+
+.home-input {
+  width: 30%;
+  height: 30px;
+  border-radius: 10px;
+  border-style: none;
+}
+
+.home-button {
+  width: 10%;
+  border-style: none;
+}
+
+.product-card {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  justify-content: space-between;
+  align-items: flex-end;
+  height: 300px;
+  margin: 5px;
+  padding: 5px;
+  padding-left: 40px;
+  width: 80%;
+}
+
+.img-product-card {
+  width: 150px;
+  height: 150px;
 }
