--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,32 @@
-#main {
+.main {
   display: flex;
   flex-direction: row;
 }
+
 ul {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items:center;
   max-width: 100px;
 }
 
-#Product-list {
+.Product-list {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-flow: wrap;
   max-width: max-content;
 }
 
-#Card {
+.Card {
   display: flex;
   flex-direction: row;
   max-width: 200px;
 }
-h3  {
+
+h3 {
   display: block;
 }
 
-#SearchBar {
+.SearchBar {
   display: block;
 }
 
