--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -1,4 +1,5 @@
-[ data-testid = 'product' ] {
+[ data-testid = 'product-detail-link' ] {
+  align-items: center;
   border: 2px solid rgb(57, 39, 127);
   border-radius: 20px;
   display: flex;
@@ -6,37 +7,44 @@
   height: 150px;
   justify-content: space-between;
   margin: 10px;
+  margin-bottom: 5px;
+  margin-top: 30px;
   padding: 10px;
   width: 150px;
 }
 
 img {
-  max-height: 110px;
-  max-width: 90%;
+  max-width:100px;
+  max-height:100px;
+  height: auto;
   padding: 3px;
+  width: auto;
 }
 
 h4 {
   font-size: 8px;
   margin: 0;
   text-align: center;
+  color: black;
 }
 
+a:link {
+  text-decoration: none;
+}
 
 p {
   font-size: 12px;
   font-weight: 700;
   margin: 0;
   text-align: center;
+  color: black;
 }
 
-aside {
-  max-height: 350px;
-  max-width: 200px;
-  overflow-y: scroll;
+.addtocart-button {
+  margin: 0;
+  display: flex;
 }
 
-li {
-  font-size: 8px;
-  list-style-type: none;
+[ data-testid = 'product' ] {
+  margin-bottom: 0px;
 }
