--- a/src/styles/ProductDetail.css
+++ b/src/styles/ProductDetail.css
@@ -1,16 +1,43 @@
+.product-detail-header {
+  align-items: center;
+  border-bottom: 1px solid #ccc;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-right: 5rem;
+}
+
 .product-detail {
   align-items: center;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   display: flex;
-  flex-direction: column;
   height: 400px;
-  justify-content: center;
+  justify-content: flex-start;
   padding: 20px;
-  width: 400px;
+  width: 50%;
+}
+
+.product-detail-section {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 80%;
+}
+
+.product-detail-section h3 {
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.product-detail-section p {
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
 }
 
 .product-thumbnail {
-  width: 50px;
+  width: 160px;
 }
 
 .div200 {
