--- a/src/styles/ShoppingCart.css
+++ b/src/styles/ShoppingCart.css
@@ -19,3 +19,18 @@
   flex-direction: column;
   margin-bottom: 1rem;
 }
+
+.checkout-order-button {
+  background-color: #ffc107;
+  border: none;
+  border-radius: 0.5rem;
+  color: white;
+  cursor: pointer;
+  font-size: 1.6em;
+  padding: 0.5rem;
+}
+
+.checkout-order-button:hover {
+  background-color: #ffd54f;
+  transition: 0.3s;
+}
