--- a/src/App.css
+++ b/src/App.css
@@ -457,6 +457,50 @@ body {
   text-align: center;
 }
 
+.checkout-button {
+  background-color: #282c34;
+  color: #f1f1f1;
+  padding: 5px 10px;
+}
+
+.revise-title {
+  font-size: 1.6em;
+  font-weight: 600;
+  margin: 30px 0;
+  text-align: center;
+}
+
+.check-prod-name {
+  margin: 15px 0 5px;
+}
+
+.check-prod-code {
+  color: #6e6e6e;
+  font-size: 0.8em;
+  margin: 0 0 5px;
+}
+
+.checkout-total {
+  margin: 30px 0;
+}
+
+.gocol {
+  display: flex;
+  flex-direction: column;
+}
+
+.w60 {
+  width: 60%;
+}
+
+.ma {
+  margin: auto;
+}
+
+.mb5 {
+  margin-bottom: 150px;
+}
+
 @keyframes App-logo-spin {
 
   from {
