--- a/src/pages/ShoppingCart.css
+++ b/src/pages/ShoppingCart.css
@@ -1,41 +1,11 @@
 .cart-item {
-  align-items: center;
-  border: 2px solid black;
-  border-radius: 30px;
   display: flex;
-  justify-content: space-evenly;
-  margin: 10px;
-}
-
-.remove-button {
-  height: 30px;
-  margin: 10px;
-}
-
-.cart-item img {
-  margin: 5px;
-  width: 90px;
 }
 
 .cart-item p {
-  margin: 5px;
-  width: 300px;
-}
-
-.amount-control {
-  display: flex;
-  margin: 5px;
-}
-
-.amount-button {
-  margin: 5px;
-}
-
-.cart-item h3 {
-  margin: 15px;
+  margin: auto;
 }
 
 .cart-item span {
   margin: auto;
 }
-
