--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,20 @@
-.App {
-  text-align: center;
+.carQtd {
+  position: relative;
+  top: 70px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.total-products {
+  background-color: blue;
+  border-radius: 50%;
+  left: 35px;
+  padding: 2px;
+  position: absolute;
+  top: 30px;
+  width: 19px;
+  z-index: 2;
 }
 
-@media ( prefers-reduced-motion : no-preference ) {
-
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-
-}
-
-.App-header {
-  align-items: center;
-  background-color: #282c34;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  font-size: calc(10px + 2vmin);
-  justify-content: center;
-  min-height: 100vh;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
+.btn-primary {
+  position: absolute;
+  z-index: 1;
 }
