--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,85 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: whitesmoke;
+  overflow: auto;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+#header {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 30px;
+  width: 100%;
+  background-color: #036b52;
+}
+
+#categories-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 25%;
+  padding: 20px;
+  background-color: #2fc18c;
+}
+
+.details-link {
+  text-decoration: none;
+  font-size: 16px;
+  color: black;
+}
+
+.details-link:hover {
+  color: #2fc18c;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #036b52;
+  padding: 20px;
+}
+
+.footer-text {
+  /* display: flex; */
+  width: 100%;
+  color: white;
+  margin: 0;
+  align-self: stretch;
+}
+
+.cart-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+
+.cart-items-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  flex-basis: 90%;
+}
+
+.cart-item {
+  display: flex;
+  padding: 20px;
+  width: 70%;
+  align-items:center;
+  background-color: white;
+  margin-bottom: 10px;
 }
