--- a/src/index.css
+++ b/src/index.css
@@ -77,9 +77,55 @@ code {
 
 .cart-item {
   display: flex;
-  padding: 20px;
+  padding: 10px;
   width: 70%;
-  align-items:center;
+  height: 200px;
+  align-items: center;
   background-color: white;
   margin-bottom: 10px;
+}
+
+.details-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 75%;
+  background-color: white;
+  padding: 20px;
+  height: 350px;
+}
+
+.details {
+  display: flex;
+  width: 100%;
+  height: 80%;
+  padding: 5px 0;
+}
+
+.image-container {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+
+}
+
+.details-image{
+  width: 40%;
+}
+
+.feedback-form{
+  background-color: white;
+  padding: 10px;
+  width: 75%;
+}
+
+.comment{
+  border: 1px solid lightgray;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 10px;
+  margin: 10px 0;
 }
