--- a/src/index.css
+++ b/src/index.css
@@ -16,9 +16,8 @@ code {
 
 #header {
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 30px;
+  justify-content: space-between;
+  padding: 10px 5px;
   width: 100%;
   background-color: #036b52;
 }
@@ -156,18 +155,7 @@ code {
   padding: 20px;
 }
 
-.cart-link{
-  position: relative;
+.nav-link {
+  display: flex;
+  color: #2fc18c;
 }
-
-#cart-qty {
-  height: 20px;
-  width: 20px;
-  font-size: 12px;
-  background-color: red;
-  position: absolute;
-  top: 0;
-  right: 0;
-  border-radius: 100px;
-}
-
