--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,196 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500;700&display=swap');
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  color: #3F3B3B;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.categories {
+  display: flex;
+  flex-direction: row;
+  background-color: white;
 }
 
-@media ( prefers-reduced-motion : no-preference ) {
-
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-
+.products {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 80%;
 }
 
-.App-header {
+.product {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 205px;
+  margin: 0px 15px 15px 15px;
+}
+
+.categoriesList {
+  margin-top: 15px;
+  width: 320px;
+}
+
+.img-products {
+  width: 200px;
+  height: 180px;
+}
+
+.img-logo {
+  width: 120px;
+  height: 50px;
+  margin: 10px;
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  background-color: #282c34;
+  height: 120px;
+  background-color: #0060b1;
+}
+
+.icon-cart {
+  margin:20px;
+}
+
+.pesquisa {
   color: white;
   display: flex;
   flex-direction: column;
-  font-size: calc(10px + 2vmin);
-  justify-content: center;
-  min-height: 100vh;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.categorie {
+  padding: 3px;
+  color: #3F3B3B;
 }
 
-@keyframes App-logo-spin {
-
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
+#input-search {
+  background-color: white;
+  border: solid 2px rgb(255, 101, 0);
+  border-radius: 10px 0 0 10px;
+  width: 300px;
+  height: 32px;
 }
+
+#btn-search {
+  color: white;
+  border: none;
+  float: right;
+  height: 38px;
+  border-radius: 0 7px 7px 0;
+  width: 80px;
+  font-weight: bold;
+  background: rgb(255, 101, 0);
+}
+
+#btn-search:hover {
+  background-color: rgb(255, 81, 1);
+}
+
+.img-cart {
+  width: 50px;
+  margin: 15px;
+}
+
+.card-product {
+  width: 205px;
+
+}
+
+.title-product {
+  color: #3F3B3B;
+}
+
+a {
+  text-decoration: none;
+}
+
+.price-product {
+  font-weight: 700;
+  font-size: 25px;
+  color:rgb(255, 101, 0);
+}
+
+#btn-addCart-product {
+  background-color: rgb(255, 101, 0);
+  color: white;
+  width: 205px;
+  border: none;
+  border-radius: 10px;
+  font-size: 15px;
+  font-weight: 700;
+}
+
+#btn-addCart-product:hover {
+ background-color: rgb(255, 81, 1);
+}
+
+.img-cart-product {
+  width: 20px;
+  padding: 1px;
+}
+
+.text-btn-addCart {
+  padding: 1px;
+  margin: 0px;
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  align-items: center;
+}
+
+.img-product-detail {
+  width: 300px;
+}
+
+.page-cart {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.cart-product {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 300px;
+  margin: 10px;
+}
+
+.btn-add-remove {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100px;
+  height: 20px;
+
+}
+
+.btn-add-remove p {
+  margin: 0px;
+  font-weight: 700;
+}
+
+.btn-add-remove button {
+  border: none;
+  width: 30px;
+  background-color: rgb(255, 101, 0);
+  color: white;
+  border-radius: 10px;
+  font-size: 15px;
+  font-weight: 700;
+}
+
+.content-cart {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
