--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500;700&display=swap') ;
 
 body {
-  font-family: 'Open Sans', sans-serif;
-  color: #3F3B3B;
+  color: #3f3b3b;
+  font-family: Open Sans , sans-serif;
 }
 
 .categories {
+  background-color: white;
   display: flex;
   flex-direction: row;
-  background-color: white;
 }
 
 .products {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
   width: 80%;
 }
 
@@ -23,8 +22,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin: 0 15px 15px;
   width: 205px;
-  margin: 0px 15px 15px 15px;
 }
 
 .categoriesList {
@@ -33,67 +32,67 @@ body {
 }
 
 .img-products {
-  width: 200px;
   height: 180px;
+  width: 200px;
 }
 
 .img-logo {
-  width: 120px;
   height: 50px;
   margin: 10px;
+  width: 120px;
 }
 
 header {
+  align-items: center;
+  background-color: #0060b1;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
   height: 120px;
-  background-color: #0060b1;
+  justify-content: space-between;
 }
 
 .icon-cart {
-  margin:20px;
+  margin: 20px;
 }
 
 .pesquisa {
+  align-items: center;
   color: white;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .categorie {
+  color: #3f3b3b;
   padding: 3px;
-  color: #3F3B3B;
 }
 
-#input-search {
+.input-search {
   background-color: white;
   border: solid 2px rgb(255, 101, 0);
   border-radius: 10px 0 0 10px;
-  width: 300px;
   height: 32px;
+  width: 300px;
 }
 
-#btn-search {
-  color: white;
-  border: none;
-  float: right;
-  height: 38px;
-  border-radius: 0 7px 7px 0;
-  width: 80px;
-  font-weight: bold;
+.btn-search {
   background: rgb(255, 101, 0);
+  border: none;
+  border-radius: 0 7px 7px 0;
+  color: white;
+  float: right;
+  font-weight: 700;
+  height: 38px;
+  width: 80px;
 }
 
-#btn-search:hover {
+.btn-search:hover {
   background-color: rgb(255, 81, 1);
 }
 
 .img-cart {
-  width: 50px;
   margin: 15px;
+  width: 50px;
 }
 
 .card-product {
@@ -102,7 +101,7 @@ header {
 }
 
 .title-product {
-  color: #3F3B3B;
+  color: #3f3b3b;
 }
 
 a {
@@ -110,40 +109,40 @@ a {
 }
 
 .price-product {
-  font-weight: 700;
+  color: rgb(255, 101, 0);
   font-size: 25px;
-  color:rgb(255, 101, 0);
+  font-weight: 700;
 }
 
-#btn-addCart-product {
+.btn-addCart-product {
   background-color: rgb(255, 101, 0);
-  color: white;
-  width: 205px;
   border: none;
   border-radius: 10px;
-  font-size: 15px;
+  color: white;
+  font-size: 1.5em;
   font-weight: 700;
+  width: 205px;
 }
 
-#btn-addCart-product:hover {
- background-color: rgb(255, 81, 1);
+.btn-addCart-product:hover {
+  background-color: rgb(255, 81, 1);
 }
 
 .img-cart-product {
-  width: 20px;
   padding: 1px;
+  width: 20px;
 }
 
 .text-btn-addCart {
+  margin: 0;
   padding: 1px;
-  margin: 0px;
 }
 
 .item {
+  align-items: center;
+  background-color: white;
   display: flex;
   flex-direction: column;
-  background-color: white;
-  align-items: center;
 }
 
 .img-product-detail {
@@ -152,45 +151,43 @@ a {
 
 .page-cart {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
 }
 
 .cart-product {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 300px;
   margin: 10px;
+  width: 300px;
 }
 
 .btn-add-remove {
   display: flex;
   flex-direction: row;
+  height: 20px;
   justify-content: space-between;
   width: 100px;
-  height: 20px;
-
 }
 
 .btn-add-remove p {
-  margin: 0px;
   font-weight: 700;
+  margin: 0;
 }
 
 .btn-add-remove button {
-  border: none;
-  width: 30px;
   background-color: rgb(255, 101, 0);
-  color: white;
+  border: none;
   border-radius: 10px;
-  font-size: 15px;
+  color: white;
+  font-size: 1.5em;
   font-weight: 700;
+  width: 30px;
 }
 
 .content-cart {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
