Finished Cart style

--- a/src/style/cart.css
+++ b/src/style/cart.css
@@ -18,3 +18,10 @@
   margin-left: -14px;
   margin-right: -14px;
 }
+
+@media screen and ( max-width : 535px ) {
+  
+  .product-card {
+    height: 195px;
+  }
+}
