--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,69 @@
 .carQtd {
   position: relative;
-  top: 70px;
+  float: right;
+  top: 10px;
 }
 
 .total-products {
-  background-color: blue;
-  border-radius: 50%;
-  left: 35px;
-  padding: 2px;
+  opacity: 0.7;
+  font-weight:900;
+  border-radius: 100%;
+  left: 205px;
+  padding: 4px;
   position: absolute;
-  top: 30px;
-  width: 19px;
+  top: 10px;
+  width: 20px;
+  height: 20px;
   z-index: 2;
 }
 
 .btn-primary {
   position: absolute;
   z-index: 1;
+  left: 170px;
+  padding: 10px;
 }
+
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media ( prefers-reduced-motion : no-preference ) {
+
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+
+}
+
+.App-header {
+  align-items: center;
+  background-color: #282c34;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  font-size: calc(10px + 2vmin);
+  justify-content: center;
+  min-height: 100vh;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
