--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,13 +1,13 @@
 .search-container {
   align-items: center;
-  float:right;
   display: flex;
-  flex-direction:column;
-  justify-content:space-between;
-  margin-right: 25%;
+  float: right;
+  flex-direction: column;
+  justify-content: space-between;
   margin-left: 25%;
-  position:absolute;
+  margin-right: 25%;
   max-width: 90%;
+  position: absolute;
 }
 
 .home-initial-message {
@@ -16,24 +16,22 @@
 }
 
 .btn-primary {
-  z-index: 1;
   margin-left: 85%;
+  z-index: 1;
 }
 
 .search-input {
   border: 1px solid black;
-  padding-top: 0.5rem;
-  outline: none;
   margin-bottom: 0.5rem;
-  width: 100%;
-  height: 1.2em;
+  outline: none;
+  padding-top: 0.5rem;
+  background: url('https://img.icons8.com/search') no-repeat 98.8% 1.2%;
   border-radius: 50em;
-  background: url(https://img.icons8.com/search)
-  no-repeat 98.8% 1.2%;
-  background-size:contain;
-  opacity: 1;
+  height: 1.2em;
+  width: 100%;
+  background-size: contain;
   cursor: pointer;
-  font-size:1.5rem;
+  opacity: 1;
+  font-size: 1.5rem;
   user-select: none;
 }
-
